cabal-version:      2.2
name:               medea
version:            1.2.1
synopsis:           A schema language for JSON.
description:
  A reference implementation of a schema language, together with a conformance
  suite and a specification.

homepage:           https://github.com/juspay/medea
bug-reports:        https://github.com/juspay/medea/issues
license:            MIT
license-file:       LICENSE.md
author:
  Koz Ross,
  Shaurya Gupta

maintainer:         koz.ross@retro-freedom.nz
copyright:          Juspay Technologies Pvt Ltd (C) 2020
category:           Data
build-type:         Simple
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.1
extra-source-files:
  .hspec
  CHANGELOG.md
  conformance/parser/fail/*.medea
  conformance/parser/pass/*.medea
  conformance/schema-builder/fail/*.medea
  conformance/schema-builder/pass/*.medea
  conformance/validation/*.medea
  README.md
  SPEC.md
  TUTORIAL.md

source-repository head
  type:     git
  location: https://github.com/juspay/medea.git

common lang-common
  default-language: Haskell2010
  build-depends:    base >=4.11.1 && <5
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

common test-common
  import:         lang-common
  other-modules:  TestM
  build-depends:
    , directory
    , filepath
    , hspec
    , medea
    , mtl

  ghc-options:    -threaded -with-rtsopts=-N
  hs-source-dirs: test

library
  import:          lang-common
  exposed-modules: Data.Medea
  other-modules:
    Data.Medea.Analysis
    Data.Medea.JSONType
    Data.Medea.Loader
    Data.Medea.Parser.Primitive
    Data.Medea.Parser.Spec.Array
    Data.Medea.Parser.Spec.Object
    Data.Medea.Parser.Spec.Property
    Data.Medea.Parser.Spec.Schema
    Data.Medea.Parser.Spec.Schemata
    Data.Medea.Parser.Spec.String
    Data.Medea.Parser.Spec.Type
    Data.Medea.Parser.Types
    Data.Medea.Schema
    Data.Medea.ValidJSON

  build-depends:
    , aeson
    , algebraic-graphs
    , bytestring
    , containers
    , deepseq
    , free
    , hashable
    , megaparsec
    , microlens-ghc
    , mtl
    , nonempty-containers
    , parser-combinators
    , scientific
    , smash
    , text
    , unordered-containers
    , vector
    , vector-instances

  hs-source-dirs:  src

test-suite conformance-parser
  import:         test-common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test/parser

test-suite conformance-schema-builder
  import:         test-common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test/schema-builder

test-suite quickcheck-validator
  import:         test-common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Data.Aeson.Arbitrary
  build-depends:
    , aeson
    , bytestring
    , hspec-core
    , QuickCheck
    , quickcheck-instances
    , text
    , unordered-containers
    , vector

  hs-source-dirs: test/validator-quickcheck
